<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/quail_cuisine"
            android:textColor="@color/very_dark_brown"
            android:textSize="38sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/quail_cuisine_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_qc" />

        <TextView
            android:id="@+id/textViewWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/website_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_restaurant_name" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/official_email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWebsite" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

        <!--        <TextView-->
        <!--            android:id="@+id/textViewInfo2"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="24dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:layout_marginEnd="24dp"-->
        <!--            android:text="We are passionate about sourcing the finest standout ingredients to create unique, thought-out dishes using flavour combinations that challenge and excite our guests. Although our tasting menus are chef’s choice only, with 72 hours’ notice we are able to adapt to most dietary requirements."-->
        <!--            android:textAlignment="center"-->
        <!--            android:textSize="16sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />-->

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/restaurant_description"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

        <TextView
            android:id="@+id/textViewInfo3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/opening_times"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />


        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewInfo3">

            <fragment
                android:id="@+id/map_view"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />

            <!--            <com.google.android.material.button.MaterialButton-->
            <!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignStart="@+id/map_view"-->
            <!--                android:layout_alignEnd="@+id/map_view"-->
            <!--                android:layout_alignParentBottom="true"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginStart="50dp"-->
            <!--                android:layout_marginEnd="50dp"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:text="Go to Google Maps"-->
            <!--                android:textSize="12sp" />-->


        </RelativeLayout>

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>