<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="25dp">

        <TextView
            android:id="@+id/text_view_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/menu_info"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_starters"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_restaurant_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/starters"
                    android:scaleType="centerCrop"
                    android:src="@drawable/starters" />

                <TextView
                    android:id="@+id/text_view_starters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5sp"
                    android:text="@string/starters"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_main_courses"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_starters"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/main_courses"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_courses" />

                <TextView
                    android:id="@+id/text_view_main_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5sp"
                    android:text="@string/main_courses"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_desserts"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_main_courses"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="55dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/desserts"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dessert" />

                <TextView
                    android:id="@+id/text_view_desserts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5sp"
                    android:text="@string/desserts"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</ScrollView>
